--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,32 @@
-[project]
+[tool.poetry]
 name = "django-samurai"
-dynamic = ["version", "description"]
-authors = [{name = "c4ffein", email="c4ffein.work@gmail.com"}]
+version = "0.1.0"
+description = "?"
+authors = ["c4ffein <c4ffein.work@gmail.com>"]
 readme = "README.md"
-requires-python = ">3.7,<4"
 keywords = ["django", "rest", "ninja"]
+packages = [
+    { include = "samurai" }
+]
 classifiers = [
     "Topic :: Software Development",
     "License :: OSI Approved :: MIT License",
 ]
 
-[project.urls]
-Homepage = "https://github.com/c4ffein/django-samurai"
-Source = "https://github.com/c4ffein/django-samurai"
-Documentation = "https://github.com/c4ffein/django-samurai"
+[tool.poetry.dependencies]
+python = "^3.7"
+
+[tool.poetry.urls]
+homepage = "https://github.com/c4ffein/django-samurai"
+repository = "https://github.com/c4ffein/django-samurai"
+documentation = "https://github.com/c4ffein/django-samurai"
 
 [dev-dependencies]
 black = { version = "^21.11b1", python = "^3.9" }
 
 [build-system]
-requires = ["flit_core >=3.2,<4"]
-build-backend = "flit_core.buildapi"
+requires = ["poetry_core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 120
